--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     <div class="container">
             <div class="menyu">
-          <img class="logo" src="/Frame 9.png" alt="">
+                <div class="menyu_logo">
+          <img  src="/Frame 9.png" alt="">
+                </div>
           <nav>
           <ul class="menyu-nav">
             <li>About us</li>
